js/js.translator/testData/incremental/invalidation/moveExternalDeclarationsBetweenFiles/lib1/JsModuleA.0.kt
@file:JsModule("../js-module-a.mjs")

external fun externalDemoFunction(): Int
